Configurable metric collector for Assignor